fix: nonmemberlist